--- a/szofttech.vcxproj.filters
+++ b/szofttech.vcxproj.filters
@@ -24,12 +24,30 @@
     <ClCompile Include="rangtipus.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="rang.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="szerepkor.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="szerepkortipusok.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="adminisztrator.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="rangtipus.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="rang.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="szerepkor.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="szerepkortipusok.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
