--- a/szofttech.vcxproj
+++ b/szofttech.vcxproj
@@ -128,6 +128,8 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="adminisztrator.cpp" />
+    <ClCompile Include="egyenleg.cpp" />
+    <ClCompile Include="hiba.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="rang.cpp" />
     <ClCompile Include="rangtipus.cpp" />
@@ -136,6 +138,8 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="adminisztrator.h" />
+    <ClInclude Include="egyenleg.h" />
+    <ClInclude Include="hiba.h" />
     <ClInclude Include="rang.h" />
     <ClInclude Include="rangtipus.h" />
     <ClInclude Include="szerepkor.h" />
